@@ -12,6 +12,7 @@ Bug fixes
 
 - fix separation of cutting planes in the master problem
 - handle new variable bounds properly when synchronizing the B&B trees
+- store pending bound changes as soon as the master problem is transformed
 
 New/changed parameters:
 -----------------------
